--- a/src/scss/landscape/style.scss
+++ b/src/scss/landscape/style.scss
@@ -352,6 +352,9 @@ body {
       color: $textColor;
     }
     &.empty {
+      a {
+        cursor: default;
+      }
       .pic {
         img {
           opacity: 0.6;
