--- a/src/scss/portrait/style.scss
+++ b/src/scss/portrait/style.scss
@@ -381,6 +381,9 @@ body {
       }
       &.empty {
         .pic {
+          a {
+            cursor: default;
+          }
           img {
             opacity: 0.6;
             filter: grayscale(100%);
