--- a/src/scss/landscape/style.scss
+++ b/src/scss/landscape/style.scss
@@ -183,6 +183,7 @@ body {
     margin-bottom: 60px;
     line-height: 110%;
   }
+
   .subTitle {
     text-align: center;
     font-size: 50px;
@@ -887,4 +888,33 @@ body {
       font-size: 24px;
     }
   }
+}
+.countDown {
+  box-sizing: border-box;
+  border: 10px solid #fff;
+  border-radius: 40px;
+  box-shadow: 0 0 40px rgba($color: $shadowColor, $alpha: 0.15);
+  overflow: hidden;
+  background: $boxBgColor;
+  position: absolute;
+  padding: 0.5rem 1.5rem;
+  top: 50px;
+  font-size: 40px;
+  font-weight: 800;
+  display: flex;
+  color: #524843;
+  right: 60px;
+  white-space: nowrap;
+  letter-spacing: 2px;
+  span {
+    display: block;
+    font-size: 40px;
+    padding-right: 0.75rem;
+  }
+}
+span.errorText {
+  color: transparent;
+  text-align: center;
+  background: linear-gradient(0deg, #960a0f 0%, #ee1249 100%);
+  background-clip: text;
 }
